# zeromq-src-rs

./: .appveyor.yml  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  sockaddr_un.c  strlcpy.c  windows_ipc.c
testcrate/: Cargo.toml  build.rs
testcrate-static/: Cargo.toml  build.rs
testcrate/src/: lib.rs
