[package]
name = "testcrate"
version = "0.1.0"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"

[features]
libsodium = ['libsodium-sys-stable']
libpgm = []

[dependencies]
libsodium-sys-stable = { version = "1.0", optional = true }

[build-dependencies]
zeromq-src = { path = ".." }
