[package]
name = "testcrate"
version = "0.1.0"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"

[features]
libsodium = ['libsodium-sys-stable']

[dependencies]
# Windows link is broken on latest libsodium-sys-stable
# https://github.com/jedisct1/libsodium-sys-stable/issues/20
[target.'cfg(target_os = "windows")'.dependencies]
libsodium-sys-stable = { version = "=1.21.4", optional = true }
[target.'cfg(not(target_os = "windows"))'.dependencies]
libsodium-sys-stable = { version = "1.0", optional = true }

[build-dependencies]
zeromq-src = { path = ".." }
